tests/rosetta/out/Fortran/binary-digits.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:40Z
program binary_digits
  implicit none
  integer :: i
    integer :: bits
    integer :: x
      character(len=100) :: s0
  do i = 0, 16
    print *, toBin(i)
  end do
  contains
  recursive character(len=100) function toBin(n) result(res)
    integer, intent(in) :: n
    if ((n == 0)) then
      res = '0'
      return
    end if
    bits = ''
    x = n
    do while ((x > 0))
      write(s0,'(G0)') mod(x,2)
      bits = (s0 + bits)
      x = int(((x / 2)))
    end do
    res = bits
    return
  end function toBin
end program binary_digits
